--- a/config/grafana/provisioning/datasources/datasources.yml
+++ b/config/grafana/provisioning/datasources/datasources.yml
@@ -3,6 +3,7 @@ apiVersion: 1
 datasources:
   - name: Prometheus
     type: prometheus
+    uid: prometheus
     access: proxy
     url: http://prometheus:9090
     isDefault: true
@@ -13,6 +14,7 @@ datasources:
 
   - name: Loki
     type: loki
+    uid: loki
     access: proxy
     url: http://loki:3100
     editable: true
@@ -21,13 +23,14 @@ datasources:
 
   - name: Tempo
     type: tempo
+    uid: tempo
     access: proxy
     url: http://tempo:3200
     editable: true
     jsonData:
       httpMethod: GET
       tracesToLogs:
-        datasourceUid: Loki
+        datasourceUid: loki
         tags: ['job', 'instance', 'pod', 'namespace']
         mappedTags: [{ key: 'service.name', value: 'service' }]
         mapTagNamesEnabled: false
@@ -36,12 +39,12 @@ datasources:
         filterByTraceID: true
         filterBySpanID: false
       tracesToMetrics:
-        datasourceUid: Prometheus
+        datasourceUid: prometheus
         tags: [{ key: 'service.name', value: 'service' }, { key: 'job' }]
         queries:
           - name: 'Request rate'
             query: 'rate(app_requests_total[$__rate_interval])'
       serviceMap:
-        datasourceUid: Prometheus
+        datasourceUid: prometheus
       nodeGraph:
         enabled: true
